# NeuroScan

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  kaggle.json  main.py  pyproject.toml  template.py
.github/workflows/: cicd.yaml
config_file/: config.yaml  params.yaml
notebooks/: Brain Tumor.ipynb  Training.ipynb  cleaning.ipynb  eda.ipynb  evaluation.ipynb  ingestion.ipynb  transform.ipynb
src/NeuroScan/components/data/: cleaning.py  ingestion.py  transform.py
src/NeuroScan/components/model/: evaluation.py  training.py
src/NeuroScan/config/: data_config.py  model_config.py
src/NeuroScan/config_entity/: config_entity.py
src/NeuroScan/constants/: paths.py
src/NeuroScan/pipelines/: feature_pipline.py  model_pipeline.py
src/NeuroScan/utils/: helpers.py  logging.py
